--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "bids-mriqc",
   "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
-  "description": "MRIQC (v0.15.1) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.",
-  "version": "1.0.11_0.15.1",
+  "description": "MRIQC (0.15.2 - April 6, 2020)) extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.  Arguments such as --n_procs --mem_gb and --ants-nthreads are set to use the maximum available as detected by MRIQC.",
+  "version": "1.0.15_0.15.2",
   "custom": {
-    "docker-image": "flywheel/bids-mriqc:1.0.11_0.15.1",
+    "docker-image": "flywheel/bids-mriqc:1.0.15_0.15.2",
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:1.0.11_0.15.1"
+      "image": "flywheel/bids-mriqc:1.0.15_0.15.2"
     },
     "flywheel": {
       "suite": "BIDS Apps"
@@ -55,11 +55,6 @@
       "description": "use float number precision on ANTs computations",
       "default": false,
       "type": "boolean"
-    },
-    "ants-nthreads": {
-      "description": "number of threads that will be set in ANTs processes",
-      "default": 1,
-      "type": "integer"
     },
     "correct-slice-timing": {
       "description": "Perform slice timing correction",
@@ -162,11 +157,6 @@
       "default": false,
       "type": "boolean"
     },
-    "mem_gb": {
-      "description": "Memory to use (default is 90% of total available)",
-      "default": 0,
-      "type": "integer"
-    },
     "modalities": {
       "description": "{T1w,bold,T2w} [{T1w,bold,T2w} ...] Default is all three",
       "enum": [
@@ -180,11 +170,6 @@
       ],
       "default": "",
       "type": "string"
-    },
-    "n_procs": {
-      "description": "number of threads",
-      "default": 0,
-      "type": "integer"
     },
     "no-sub": {
       "description": "Turn off submission of anonymized quality metrics to MRIQC’s metrics repository",
