--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "bids-mriqc",
   "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
   "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-  "version": "1.1.0_0.15.2",
+  "version": "1.1.1_0.15.2",
   "custom": {
-    "docker-image": "flywheel/bids-mriqc:1.1.0_0.15.2",
+    "docker-image": "flywheel/bids-mriqc:1.1.1_0.15.2",
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:1.1.0_0.15.2"
+      "image": "flywheel/bids-mriqc:1.1.1_0.15.2"
     },
     "flywheel": {
       "suite": "BIDS Apps"
@@ -38,6 +38,11 @@
     "key": {
       "base": "api-key",
       "read-only": true
+    },
+    "bidsignore": {
+      "description": "A .bidsignore file to provide to the bids-validator that this gear runs before running the main command.",
+      "base": "file",
+      "optional": true
     }
   },
   "config": {
