--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "bids-mriqc",
   "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
   "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-  "version": "1.2.0_0.15.2",
+  "version": "1.2.1_0.15.2",
   "custom": {
-    "docker-image": "flywheel/bids-mriqc:1.2.0_0.15.2",
+    "docker-image": "flywheel/bids-mriqc:1.2.1_0.15.2",
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:1.2.0_0.15.2"
+      "image": "flywheel/bids-mriqc:1.2.1_0.15.2"
     },
     "flywheel": {
       "suite": "BIDS Apps"
@@ -259,7 +259,8 @@
     "PATH": "/usr/local/miniconda/bin:/opt/afni:/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
     "POSSUMDIR": "/usr/share/fsl/5.0",
     "PYTHONNOUSERSITE": "1",
-    "TEMPLATEFLOW_HOME": "/opt/templateflow"
+    "TEMPLATEFLOW_HOME": "/opt/templateflow",
+    "REQUESTS_CA_BUNDLE":"/etc/ssl/certs/ca-certificates.crt"
   },
   "command": "python run.py",
   "author": "Poldrack Lab, Stanford University",
