--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,15 @@
   "name": "bids-mriqc",
   "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
   "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-  "version": "1.2.2_0.15.2",
+  "version": "1.2.2_22.0.6_inc0.2",
   "custom": {
-    "docker-image": "flywheel/bids-mriqc:1.2.2_0.15.2",
+    "docker-image": "amhe4269/bids-mriqc:1.2.2_22.0.6_inc0.2",
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/bids-mriqc:1.2.2_0.15.2"
+      "image": "amhe4269/bids-mriqc:1.2.2_22.0.6_inc0.2"
     },
     "flywheel": {
-      "suite": "BIDS Apps"
+      "suite": "QA"
     },
     "license": {
       "non-commercial-use-only": true,
@@ -236,6 +236,16 @@
       "description": "Write workflow graph",
       "default": false,
       "type": "boolean"
+    },
+    "n_cpus": {
+      "description": "Number of CPUs/cores to use. Leave blank or set to 0 to use the maximum available in the system.",
+      "optional": true,
+      "type": "integer"
+    },
+    "mem_gb": {
+      "description": "Maximum memory to use (GB). Leave blank or set to 0 to use the maximum available in the system.",
+      "optional": true,
+      "type": "integer"
     }
   },
   "environment": {
@@ -256,7 +266,7 @@
     "LD_LIBRARY_PATH": "/usr/lib/fsl/5.0:",
     "MKL_NUM_THREADS": "1",
     "OMP_NUM_THREADS": "1",
-    "PATH": "/usr/local/miniconda/bin:/opt/afni:/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+    "PATH": "/opt/fsl/bin:/opt/ants:/opt/afni:/opt/conda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
     "POSSUMDIR": "/usr/share/fsl/5.0",
     "PYTHONNOUSERSITE": "1",
     "TEMPLATEFLOW_HOME": "/opt/templateflow",
