--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
     "name": "bids-mriqc",
     "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
     "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-    "version": "1.2.2_22.0.6_inc0.4",
+    "version": "1.2.2_22.0.6_inc0.6",
     "custom": {
-        "docker-image": "lsherbakov/bids-mriqc:1.2.2_22.0.6_inc0.4",
+        "docker-image": "lsherbakov/bids-mriqc:1.2.2_22.0.6_inc0.6",
         "gear-builder": {
             "category": "analysis",
-            "image": "lsherbakov/bids-mriqc:1.2.2_22.0.6_inc0.4"
+            "image": "lsherbakov/bids-mriqc:1.2.2_22.0.6_inc0.6"
         },
         "flywheel": {
             "suite": "QA"
@@ -251,6 +251,41 @@
             "description": "Maximum memory to use (GB). Leave blank or set to 0 to use the maximum available in the system.",
             "default": 8,
             "type": "integer"
+        },
+        "slurm-cpu": {
+            "default": "1",
+            "description": "[SLURM] How many cpu-cores to request per command/task. This is used for the underlying '--cpus-per-task' option. If not running on HPC, then this flag is ignored",
+            "type": "string"
+        },
+        "slurm-ram": {
+            "default": "12G",
+            "description": "[SLURM] How much RAM to request. This is used for the underlying '--mem-per-cpu' option. If not running on HPC, then this flag is ignored",
+            "type": "string"
+        },
+        "slurm-ntasks": {
+            "default": "1",
+            "description": "[SLURM] Total number of tasks/commands across all nodes (not equivalent to neuroimaging tasks). Using a value greater than 1 for code that has not been parallelized will not improve performance (and may break things).",
+            "type": "string"
+        },
+        "slurm-nodes": {
+            "default": "1",
+            "description": "[SLURM] How many HPC nodes to run on",
+            "type": "string"
+        },
+        "slurm-partition": {
+            "default": "blanca-ics",
+            "description": "[SLURM] Blanca, Alpine, or Summit partitions can be entered",
+            "type": "string"
+        },
+        "slurm-qos": {
+            "default": "blanca-ics",
+            "description": "[SLURM] For Blanca the QOS has a different meaning, ie blanca-ics vs blanca-ibg, etc. For Alpine and Summit, the QOS should be set to normal if running a job for 1 day or less, and set to long if running a job with a maximum walltime of 7 days",
+            "type": "string"
+        },
+        "slurm-time": {
+            "default": "1428",
+            "description": "[SLURM] Maximum walltime requested after which your job will be cancelled if it hasn't finished. Default to 1 day",
+            "type": "string"
         }
     },
     "environment": {
