--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
     "name": "bids-mriqc",
     "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
     "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-    "version": "1.2.2_22.0.6_inc0.7",
+    "version": "1.2.2_22.0.6_inc0.8",
     "custom": {
-        "docker-image": "amhe4269/bids-mriqc:1.2.2_22.0.6_inc0.7",
+        "docker-image": "lsherbakov/bids-mriqc:1.2.2_22.0.6_inc0.8",
         "gear-builder": {
             "category": "analysis",
-            "image": "amhe4269/bids-mriqc:1.2.2_22.0.6_inc0.7"
+            "image": "lsherbakov/bids-mriqc:1.2.2_22.0.6_inc0.8"
         },
         "flywheel": {
             "suite": "QA"
@@ -280,6 +280,11 @@
         "slurm-qos": {
             "default": "blanca-ics",
             "description": "[SLURM] For Blanca the QOS has a different meaning, ie blanca-ics vs blanca-ibg, etc. For Alpine and Summit, the QOS should be set to normal if running a job for 1 day or less, and set to long if running a job with a maximum walltime of 7 days",
+            "type": "string"
+        },
+        "slurm-account": {
+            "default": "blanca-ics",
+            "description": "[SLURM] For Blanca the ACCOUNT should be set to the sub-account of choice (e.g. blanca-ics-rray). For Alpine, the account should be set to ucb-general, or the specialized account granted by RC: ucb278_asc1",
             "type": "string"
         },
         "slurm-time": {
