--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "bids-mriqc",
     "label": "BIDS MRIQC: Automatic prediction of quality and visual reporting of MRI scans in BIDS format",
-    "description": "MRIQC (0.15.2 - April 6, 2020) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
-    "version": "1.2.4_22.0.6_inc1.1",
+    "description": "(HPC Compatible) MRIQC (22.0.6 - Aug 24, 2022) extracts no-reference image quality metrics (IQMs) from T1w and T2w structural and functional magnetic resonance imaging data.  Note: arguments --n_procs --mem_gb and --ants-nthreads are not availble to configure becaues they are set to use the maximum available as detected by MRIQC.",
+    "version": "1.2.4_22.0.6_inc1.1rc1",
     "custom": {
-        "docker-image": "lsherbakov/bids-mriqc:1.2.4_22.0.6_inc1.1",
+        "docker-image": "amhe4269/bids-mriqc:1.2.4_22.0.6_inc1.1rc1",
         "gear-builder": {
             "category": "analysis",
-            "image": "lsherbakov/bids-mriqc:1.2.4_22.0.6_inc1.1"
+            "image": "amhe4269/bids-mriqc:1.2.4_22.0.6_inc1.1rc1"
         },
         "flywheel": {
             "suite": "QA"
