--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
-flywheel-gear-toolkit[sdk]==0.*,>=0.6.10
-fw-client==0.*,>=0.3.1
-psutil==5.*,>=5.6.3
+attrs==24.2.0 ; python_version >= "3.9" and python_version < "4.0"
+beautifulsoup4==4.12.3 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2024.8.30 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.4.0 ; python_version >= "3.9" and python_version < "4.0"
+dotty-dict==1.3.1 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-bids==1.2.25 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-gear-toolkit==0.6.19 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-gears==0.3.1 ; python_version >= "3.9" and python_version < "4.0"
+flywheel-sdk==19.2.0 ; python_version >= "3.9" and python_version < "4.0"
+fw-gear==0.1.3 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.9" and python_version < "4.0"
+importlib-resources==6.4.5 ; python_version >= "3.9" and python_version < "4.0"
+jsonschema-specifications==2024.10.1 ; python_version >= "3.9" and python_version < "4.0"
+jsonschema==4.23.0 ; python_version >= "3.9" and python_version < "4.0"
+packaging==24.1 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
+referencing==0.35.1 ; python_version >= "3.9" and python_version < "4.0"
+requests-toolbelt==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.32.3 ; python_version >= "3.9" and python_version < "4.0"
+rfc3987==1.3.8 ; python_version >= "3.9" and python_version < "4.0"
+rpds-py==0.20.0 ; python_version >= "3.9" and python_version < "4.0"
+rtstatlib==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+soupsieve==2.6 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==2.2.3 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.20.2 ; python_version >= "3.9" and python_version < "3.10"
